fixed jumping input field

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -130,8 +130,11 @@ header#main_header {
           color: #9da701; }
         #chat_window #text_window > .output > p:before {
           content: attr(title) ": "; }
-        #chat_window #text_window > .output > p.status:before {
-          content: ''; }
+        #chat_window #text_window > .output > p.status {
+          color: #9da701; }
+          #chat_window #text_window > .output > p.status:before {
+            content: '';
+            padding-left: 20px; }
     #chat_window #text_window:after {
       box-shadow: 0 -70px 70px -50px rgba(0, 0, 0, 0.2) inset, 0 70px 70px -50px rgba(235, 255, 155, 0.2) inset;
       pointer-events: none;
@@ -159,8 +162,8 @@ header#main_header {
         width: 460px;
         -webkit-appearance: none;
         background: none;
-        height: 20px;
-        line-height: 20px;
+        height: 28px;
+        line-height: 28px;
         color: #2fa701;
         font-size: 18px;
         font-family: CPMono;
@@ -273,6 +276,7 @@ ul.ui-autocomplete {
     background-size: 3px 3px; }
 
 #text_pad {
+  -webkit-user-select: none;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -297,6 +301,7 @@ ul.ui-autocomplete {
       #text_pad ul.team li.team-name ul.users {
         margin: 0 0 0 20px; }
         #text_pad ul.team li.team-name ul.users li.user {
+          -webkit-user-select: auto;
           display: inline-block; }
           #text_pad ul.team li.team-name ul.users li.user:not(:last-child):after {
             content: ",";
@@ -345,3 +350,5 @@ ul.ui-autocomplete {
     height: 30px;
     width: 5px;
     background: #555; }
+  #text_pad *::selection {
+    background-color: rgba(222, 167, 227, 0.8); }
